fix: Increase the contrast of the table header text in the BAM files and variants list

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1136,7 +1136,7 @@ sandbox header
     text-align: left;
     position: sticky;
     top: 0;
-    opacity: 0.5;
+    opacity: 0.7;
     font-weight: normal;
 }
 
